Fix resource card h2 line height on mobile

--- a/src/components/Resources/resources-card.module.scss
+++ b/src/components/Resources/resources-card.module.scss
@@ -74,6 +74,7 @@
     padding-left: 0;
     h2 {
       margin-bottom: 15px;
+      line-height: 30px;
     }
     a {
       margin-bottom: 15px;
